--- a/frontend/web/public/index.html
+++ b/frontend/web/public/index.html
@@ -234,6 +234,7 @@
         </div>
     </div>
     
+    <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
