--- a/frontend/web/public/index.html
+++ b/frontend/web/public/index.html
@@ -1015,6 +1015,7 @@
             document.getElementById('protocol').value = '';
             document.getElementById('auth-code').value = '';
             document.getElementById('auth-code-container').style.display = 'none';
+            // Start the MTI stream after login, not on page load
         });
     </script>
 </body>
